Amélioration version Full-Stack et modif code SQL

--- a/VERSION_FULLSTACK/frontend/entete_page/connexion.html
+++ b/VERSION_FULLSTACK/frontend/entete_page/connexion.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <canvas id="particles-canvas"></canvas>
+    
     <!-- Conteneur pour la barre de navigation -->
     <div id="nav-container"></div>
 
