--- a/VERSION_FULLSTACK/frontend/pied_page/plan-contenu.html
+++ b/VERSION_FULLSTACK/frontend/pied_page/plan-contenu.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <canvas id="particles-canvas"></canvas>
+
     <div id="nav-container"></div>
     <div id="header-container"></div>
     <div id="category-nav-container"></div>
